2015-02-06  Nicolas Petton <nicolas@petton.fr>

	* sequences.texi (Sequence Functions): Add documentation for
	seq-mapcat, seq-partition and seq-group-by.

2015-02-05  Martin Rudalics  <rudalics@gmx.at>

	* display.texi (Size of Displayed Text): Remove description of
	optional argument BUFFER of `window-text-pixel-size'.

2015-02-01  Martin Rudalics  <rudalics@gmx.at>

	* display.texi (Size of Displayed Text): Describe optional
	argument BUFFER of `window-text-pixel-size'.

2015-01-28  Eli Zaretskii  <eliz@gnu.org>

	* searching.texi (Regexp Search): Add a cross-reference to "Syntax
	of Regexps".  (Bug#19668)

2015-01-28  Daniel Koning  <dk@danielkoning.com>  (tiny change)

	* commands.texi (Drag Events, Motion Events, Event Examples)
	(Accessing Mouse): Describe actual range of values that mouse
	position objects can have.

2015-01-28  Eli Zaretskii  <eliz@gnu.org>

	* display.texi (Manipulating Buttons): Explain more about the
	'action' property.  (Bug#19628)

	* text.texi (Clickable Text): Improve indexing.  (Bug#19629)

	* variables.texi (Creating Buffer-Local): Improve indexing.  (Bug#19608)

	* frames.texi (Display Feature Testing): Make the description of
	x-server-version and x-server-vendor less X-specific.  (Bug#19502)

2015-01-15  Eli Zaretskii  <eliz@gnu.org>

	* streams.texi (Input Functions): Document 'set-binary-mode'.
	(Output Functions): Cross-reference to documentation of
	'set-binary-mode'.

2015-01-04  Paul Eggert  <eggert@cs.ucla.edu>

	batch write-region no longer says "Wrote FOO"
	* files.texi (Writing to Files): Document this.

2014-12-31  Paul Eggert  <eggert@cs.ucla.edu>

	Less 'make' chatter for Emacs doc
	* Makefile.in (AM_DEFAULT_VERBOSITY, AM_V_GEN, am__v_GEN_)
	(am__v_GEN_0, am__v_GEN_1): New macros, from ../../src/Makefile.in.
	(ENVADD, $(buildinfodir)/elisp.info, elisp.html):
	Use them.

2014-12-30  Martin Rudalics  <rudalics@gmx.at>

	* display.texi (Temporary Displays): Amend description of