@@ -1,3 +1,8 @@
+2015-02-09  Eli Zaretskii  <eliz@gnu.org>
+
+	* positions.texi (Screen Lines): Update the documentation of
+	vertical-motion to document the new additional argument.
+
 2015-02-06  Nicolas Petton <nicolas@petton.fr>
 
 	* sequences.texi (Sequence Functions): Add documentation for
